fixed overflow hidden on nav bar

--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,6 @@ nav {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    overflow: hidden;
     background-color: rgb(0, 0, 0);
 }
 
@@ -121,6 +120,12 @@ h1{
     text-align: center;
     padding: 3rem;
     font-size: larger;
+}
+
+.homecontain {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .homeimages {
